fix layout bug

--- a/src/components/Chart/chart.module.css
+++ b/src/components/Chart/chart.module.css
@@ -1,5 +1,5 @@
 .container {
   justify-content: center;
   display: flex;
-  width: 85%;
+  width: 100%;
 }
